# FAMP

./: .gitignore  ADVERSARIAL-REVIEW-refactors.md  ARCHITECTURE.md  BETA-FEEDBACK-CODEX-AUTO-WAKE.md  CLAUDE.md  CODE-REVIEW-GROK-LISTEN-WAKE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAMP-v0.5-spec.md  FAMP-v0.5.1-spec.md  Justfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  REFACTORING-REVIEW-2026-06-05.md  REFACTORING-REVIEW-2026-07-08.md  SECURITY.md  beta-feedback-listen-mode-compaction-disarm-2026-07-21.md  learned-rules.md  tg-codex-famp-connection-report-2026-05-31.md
crates/famp/: Cargo.toml
crates/famp-bus/: Cargo.toml
crates/famp-bus/src/: codec.rs  env.rs  error.rs  lib.rs  liveness.rs  mailbox.rs  proto.rs
crates/famp-bus/src/broker/: awaiting.rs  drain_walk.rs  handle.rs  identity.rs  mod.rs  state.rs
crates/famp-bus/tests/: audit_log_dispatch.rs  buserror_consumer_stub.rs  codec_fuzz.rs  prop01_dm_fanin_order.rs  prop02_channel_fanout.rs  prop03_join_leave_idempotent.rs  prop04_drain_completeness.rs  prop05_pid_unique.rs  tdd02_drain_cursor_order.rs  tdd03_pid_reuse.rs  tdd04_eof_cleanup.rs
crates/famp-bus/tests/common/: mod.rs
crates/famp-canonical/: Cargo.toml
crates/famp-canonical/docs/: fallback.md
crates/famp-canonical/src/: artifact_id.rs  canonical.rs  error.rs  lib.rs  strict_parse.rs
crates/famp-canonical/tests/: artifact_id.rs  conformance.rs  duplicate_keys.rs  float_corpus.rs  utf16_supplementary.rs
crates/famp-canonical/tests/vectors/: float_corpus_sample.txt
crates/famp-core/: Cargo.toml
crates/famp-core/src/: artifact.rs  class.rs  error.rs  identity.rs  ids.rs  invariants.rs  lib.rs  scope.rs  terminal_status.rs
crates/famp-core/tests/: artifact_roundtrip.rs  error_wire_strings.rs  exhaustive_consumer_stub.rs  identity_roundtrip.rs  ids_roundtrip.rs  invariants_present.rs  scope_satisfies.rs  scope_wire_strings.rs
crates/famp-crypto/: Cargo.toml  README.md
crates/famp-crypto/src/: error.rs  hash.rs  keys.rs  lib.rs  prefix.rs  sign.rs  traits.rs  verify.rs
crates/famp-crypto/tests/: base64_roundtrip.rs  rfc8032_vectors.rs  sha256_vectors.rs  weak_key_rejection.rs  worked_example.rs
crates/famp-envelope/: Cargo.toml
crates/famp-envelope/src/: bus.rs  causality.rs  class.rs  dispatch.rs  envelope.rs  error.rs  lib.rs  peek.rs  scope.rs  timestamp.rs  version.rs  view.rs  wire.rs
crates/famp-envelope/src/body/: ack.rs  audit_log.rs  bounds.rs  commit.rs  control.rs  deliver.rs  mod.rs  request.rs
crates/famp-envelope/tests/: adversarial.rs  audit_log_red_gate.rs  body_shapes.rs  compile_fail_unsigned.rs  errors.rs  prop_roundtrip.rs  provisional_scope_instructions_vector.rs  roundtrip_signed.rs  scope_more_coming_round_trip.rs  smoke.rs  vector_1_audit_log.rs  vector_zero.rs
crates/famp-fsm/: Cargo.toml
crates/famp-fsm/src/: engine.rs  error.rs  input.rs  lib.rs  state.rs
crates/famp-fsm/tests/: consumer_stub.rs  deterministic.rs  proptest_matrix.rs
crates/famp-gateway/: Cargo.toml
crates/famp-gateway/src/: error.rs  lib.rs  main.rs  principal.rs  registry.rs  verify.rs
crates/famp-gateway/tests/: liveness.rs  no_cross_talk.rs
crates/famp-gateway/tests/common/: child_guard.rs
crates/famp-inbox/: Cargo.toml
crates/famp-inbox/src/: append.rs  cursor.rs  error.rs  lib.rs  lock.rs  read.rs
crates/famp-inbox/tests/: cursor_roundtrip.rs  lock_contention.rs  read_from.rs  roundtrip.rs  truncated_tail.rs
crates/famp-inspect-client/: Cargo.toml
crates/famp-inspect-client/src/: lib.rs
crates/famp-inspect-proto/: Cargo.toml
crates/famp-inspect-proto/src/: lib.rs
crates/famp-inspect-server/: Cargo.toml
crates/famp-inspect-server/src/: broker.rs  identities.rs  lib.rs  messages.rs  parse.rs  tasks.rs  waiters.rs
crates/famp-keyring/: Cargo.toml
crates/famp-keyring/src/: error.rs  file_format.rs  lib.rs  peer_flag.rs
crates/famp-keyring/tests/: peer_flag.rs  roundtrip.rs
crates/famp-keyring/tests/fixtures/: two_peers.canonical.keyring  two_peers.keyring
crates/famp-taskdir/: Cargo.toml
crates/famp-taskdir/src/: atomic.rs  error.rs  lib.rs  record.rs  store.rs
crates/famp-taskdir/tests/: roundtrip.rs  try_update.rs
crates/famp-transport/: Cargo.toml
crates/famp-transport-http/: Cargo.toml
crates/famp-transport-http/src/: error.rs  lib.rs  middleware.rs  server.rs  tls.rs  tls_server.rs  transport.rs
crates/famp-transport-http/tests/: middleware_layering.rs
crates/famp-transport/src/: error.rs  lib.rs  memory.rs
crates/famp/assets/: famp-await.sh  hook-runner.sh
crates/famp/assets/slash_commands/: famp-channel.md  famp-inbox.md  famp-join.md  famp-leave.md  famp-register.md  famp-send.md  famp-who.md
crates/famp/examples/: _gen_fixture_certs.rs  cross_machine_two_agents.rs  personal_two_agents.rs
crates/famp/src/: lib.rs
crates/famp/src/bus_client/: codec.rs  mod.rs  spawn.rs
crates/famp/src/cli/: config.rs  error.rs  home.rs  identity.rs  info.rs  join.rs  leave.rs  listen_wake.rs  mod.rs  paths.rs  perms.rs  (+6 more)
crates/famp/tests/: abort_on_fd.rs  adversarial.rs  await_blocks_until_message.rs  await_commit_advance_error_surfaces.rs  await_timeout.rs  broker_crash_recovery.rs  broker_lifecycle.rs  broker_proxy_semantics.rs  broker_spawn_race.rs  child_guard_reaps.rs  cli_channel_fanout.rs  cli_dm_roundtrip.rs  cli_help_invariant.rs  cli_inbox.rs  cli_sessions.rs  clierror_fsm_transition_display.rs  codex_install_uninstall_roundtrip.rs  conversation_auto_commit.rs  conversation_full_lifecycle.rs  conversation_inbox_lock.rs  conversation_restart_safety.rs  cross_machine_happy_path.rs  daemon_lifecycle.rs  daemon_restart_binary_pickup.rs  e2e_two_daemons.rs  e2e_two_daemons_adversarial.rs  example_happy_path.rs  famp_local_wire_migration.rs  grok_install_uninstall_roundtrip.rs  hook_codex_stop.rs  hook_runner_await.rs  hook_runner_dispatch.rs  hook_runner_failure_modes.rs  hook_runner_path_parity.rs  hook_subcommand.rs  http_happy_path.rs  inbox_list_filters_terminal.rs  inbox_list_respects_cursor.rs  inbox_unread_matches_delivered.rs  info_happy_path.rs  (+49 more)
(+657 files in other folders)
