[package]
name = "famp-canonical"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP v0.5.1 — famp-canonical crate (stub)"

[lints]
workspace = true

[features]
default = ["wave2_impl"]
wave2_impl = []
full-corpus = []

[dependencies]
serde_jcs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, features = ["default"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
