[package]
name = "famp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP — core protocol primitives: Principal, Instance, ArtifactId, MessageClass, ProtocolErrorKind, AuthorityScope."

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7", "serde"] }

[dev-dependencies]
serde_json = { workspace = true }
