[package]
name = "famp-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP v0.5.1 — Ed25519 sign/verify with domain separation and strict ingress"

[lints]
workspace = true

[dependencies]
ed25519-dalek  = { workspace = true }
base64         = { workspace = true }
thiserror      = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
zeroize        = { version = "1", features = ["derive"] }
subtle         = "2"
sha2           = { workspace = true }
famp-canonical = { path = "../famp-canonical", version = "0.1.0" }

[dev-dependencies]
hex        = "0.4.3"
proptest   = { workspace = true }
insta      = { workspace = true }
serde_json = { workspace = true }
