[package]
name = "famp-envelope"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP — wire envelope construction, Ed25519 signing under the FAMP-sig-v1 domain prefix (INV-10)."

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
famp-canonical = { path = "../famp-canonical", version = "0.1.0" }
famp-crypto = { path = "../famp-crypto", version = "0.1.0" }
famp-core = { path = "../famp-core", version = "0.1.0" }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true, features = ["json"] }
hex = { workspace = true }
