[package]
name = "famp-fsm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP v0.5.1 — famp-fsm crate (stub)"

[lints]
workspace = true

[dependencies]
famp-core = { path = "../famp-core" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
