[package]
name = "famp-fsm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP — task finite-state machine (REQUESTED → COMMITTED → COMPLETED|FAILED|CANCELLED) with absorbing terminals."

[lints]
workspace = true

[dependencies]
famp-core = { path = "../famp-core", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
