[package]
name = "famp-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP v0.5.2 — famp-gateway crate (Layer 2 skeleton)"

[lints]
workspace = true

[dependencies]
famp-bus     = { path = "../famp-bus", version = "0.11.0" }
famp         = { path = "../famp", version = "0.11.0" }
famp-keyring = { path = "../famp-keyring", version = "0.11.0" }
famp-envelope = { path = "../famp-envelope", version = "0.11.0" }
tokio     = { workspace = true, features = ["rt", "sync", "macros", "net", "signal"] }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"
serde_json = { workspace = true }
uuid = { workspace = true }
famp-inspect-proto = { path = "../famp-inspect-proto", version = "0.11.0" }

[[bin]]
name = "famp-gateway"
path = "src/main.rs"
