[package]
name = "famp-inbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP v0.5.1 — durable JSONL inbox (append with fsync, tail-tolerant read)"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs", "sync", "io-util", "rt"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
