[package]
name = "famp-inspect-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP v0.10 Inspector RPC client (UDS, async, no clap, dead-broker probes)"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "net", "process", "rt", "time", "macros"] }
famp-inspect-proto = { path = "../famp-inspect-proto", version = "0.1.0" }
famp-bus = { path = "../famp-bus", version = "0.1.0" }
famp-canonical = { path = "../famp-canonical", version = "0.1.0" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["socket"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
