[package]
name = "famp-keyring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP v0.7 — local-file TOFU keyring for Personal Profile"

[lints]
workspace = true

[dependencies]
famp-core = { path = "../famp-core" }
famp-crypto = { path = "../famp-crypto" }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
