[package]
name = "famp-taskdir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP v0.5.1 — per-task TOML storage primitive (atomic replace + fsync)"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
toml = "1.1"
thiserror = { workspace = true }
tempfile = "3"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
