[package]
name = "famp-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP — transport trait abstraction: MemoryTransport for tests, HTTPS binding lives in famp-transport-http."

[lints]
workspace = true

[dependencies]
famp-core = { path = "../famp-core", version = "0.1.0" }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "rt-multi-thread", "time"] }

[features]
test-util = []
