[package]
name = "famp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP v0.5.1 — umbrella crate and CLI"

[lints]
workspace = true

[dependencies]
famp-core = { path = "../famp-core" }
famp-canonical = { path = "../famp-canonical" }
famp-crypto = { path = "../famp-crypto" }
famp-envelope = { path = "../famp-envelope" }
famp-fsm = { path = "../famp-fsm" }
famp-transport = { path = "../famp-transport" }
famp-keyring = { path = "../famp-keyring" }
famp-transport-http = { path = "../famp-transport-http" }
famp-inbox = { path = "../famp-inbox" }
famp-taskdir = { path = "../famp-taskdir" }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "process", "io-util", "io-std", "signal", "net"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
url = "2"
base64 = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
toml = "1.1"
rcgen = "0.14"
tempfile = "3"
time = { version = "0.3", features = ["serde-well-known", "formatting", "macros"] }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = { workspace = true }
humantime = "2"
famp-bus = { path = "../famp-bus" }
nix = { version = "0.31", features = ["process", "fs"] }
dirs = "5"
[dev-dependencies]
# test-util feature of famp-transport is ONLY enabled in dev-dependencies so
# send_raw_for_test is unreachable from production builds (D-D6).
famp-transport = { path = "../famp-transport", features = ["test-util"] }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "test-util", "process", "io-util", "signal", "net"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
axum = "0.8"
assert_cmd = "2.0"

[[bin]]
name = "famp"
path = "src/bin/famp.rs"
