[package]
name = "famp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FAMP v0.5.1 — umbrella crate and CLI"

[lints.rust]
# Inherit the workspace clippy/rust lint set, but downgrade `unsafe_code`
# from `forbid` to `deny` so `bus_client::spawn` can opt-in via a single
# narrowly-scoped `#[allow(unsafe_code)]` for the locked Q1 broker-spawn
# pattern (`Command::new` + child-side `pre_exec(setsid)` per RESEARCH).
# Every other module in the crate keeps the `deny` posture and the lib
# root retains `#![forbid(unsafe_code)]` outside `bus_client::spawn`.
unsafe_code = "deny"
unused_crate_dependencies = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
famp-core = { path = "../famp-core", version = "0.1.0" }
famp-canonical = { path = "../famp-canonical", version = "0.1.0" }
famp-crypto = { path = "../famp-crypto", version = "0.1.0" }
famp-envelope = { path = "../famp-envelope", version = "0.1.0" }
famp-fsm = { path = "../famp-fsm", version = "0.1.0" }
famp-transport = { path = "../famp-transport", version = "0.1.0" }
famp-inbox = { path = "../famp-inbox", version = "0.1.0" }
famp-taskdir = { path = "../famp-taskdir", version = "0.1.0" }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "process", "io-util", "io-std", "signal", "net"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
url = "2"
base64 = { workspace = true }
clap = { version = "4.6", features = ["derive", "env"] }
toml = "1.1"
tempfile = "3"
time = { version = "0.3", features = ["serde-well-known", "formatting", "macros"] }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
humantime = "2"
famp-bus = { path = "../famp-bus", version = "0.1.0" }
famp-inspect-server = { path = "../famp-inspect-server", version = "0.1.0" }
famp-inspect-proto = { path = "../famp-inspect-proto", version = "0.1.0" }
famp-inspect-client = { path = "../famp-inspect-client", version = "0.1.0" }
nix = { version = "0.31", features = ["process", "fs", "signal"] }
dirs = "5"
regex = { workspace = true }
which = "7"
[dev-dependencies]
# test-util feature of famp-transport is ONLY enabled in dev-dependencies so
# send_raw_for_test is unreachable from production builds (D-D6).
famp-keyring = { path = "../famp-keyring", version = "0.1.0" }
famp-transport-http = { path = "../famp-transport-http", version = "0.1.0" }
famp-transport = { path = "../famp-transport", version = "0.1.0", features = ["test-util"] }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "test-util", "process", "io-util", "signal", "net"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
axum = "0.8"
assert_cmd = "2.0"
insta = { version = "1.47.2", features = ["json"] }
# WR-06: scoped env-var mutation for tests. Replaces the manual
# save/set/restore dance in identity.rs / bus_client / mcp_register_whoami
# tests; required before Rust 2024 makes `std::env::set_var` `unsafe fn`.
temp-env = "0.3"

[[bin]]
name = "famp"
path = "src/bin/famp.rs"
